tests/ui/feature-gates/feature-gate-associated-traits.stderr
error[E0658]: associated traits are experimental
  --> $DIR/feature-gate-associated-traits.rs:2:5
   |
LL |     trait Arg;
   |     ^^^^^^^^^^
   |
   = help: add `#![feature(associated_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated traits are experimental
  --> $DIR/feature-gate-associated-traits.rs:5:5
   |
LL |     trait Iter = Clone;
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(associated_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated traits are experimental
  --> $DIR/feature-gate-associated-traits.rs:10:5
   |
LL |     trait Arg = Copy;
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(associated_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated traits are experimental
  --> $DIR/feature-gate-associated-traits.rs:13:5
   |
LL |     trait Iter = Clone;
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(associated_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
